--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@ Debug/
 Release/
 */poc/main
 */poc/main_pi
+*.o
+*.o.cmd
+*.order
+*.order.cmd
+*.symvers
+*.symvers.cmd
+*.ko
+*.ko.cmd
+*.mod
+*.mod.c
+*.mod.cmd
+*.mod.o.cmd
