--- a/LinuxDriver/kernel_module/Makefile
+++ b/LinuxDriver/kernel_module/Makefile
@@ -1,4 +1,4 @@
-TARGET_MODULE:=odbyt-module
+TARGET_MODULE:=accel-module
 
 # If we are running by kernel building system
 ifneq ($(KERNELRELEASE),)
