--- a/LinuxDriver/kernel_module/Makefile
+++ b/LinuxDriver/kernel_module/Makefile
@@ -2,7 +2,7 @@ TARGET_MODULE:=accel-module
 
 # If we are running by kernel building system
 ifneq ($(KERNELRELEASE),)
-   $(TARGET_MODULE)-objs := main.o
+   $(TARGET_MODULE)-objs := main.o accel.o
    obj-m := $(TARGET_MODULE).o
 # If we running without kernel build system
 else
